--- a/Traineeship-Testing/Traineeship-Testing/Shared/NavMenu.razor
+++ b/Traineeship-Testing/Traineeship-Testing/Shared/NavMenu.razor
@@ -1,32 +1,13 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Traineeship-Testing</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
+﻿<MudNavMenu>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
+    <MudNavGroup Title="Expenses" Expanded="true">
+        <MudNavLink Href="/ExpenseOverview" Match="NavLinkMatch.Prefix">Overview</MudNavLink>
+        <MudNavLink Href="/EditExpense" Match="NavLinkMatch.Prefix">Add Expense</MudNavLink>
+    </MudNavGroup>
+    <MudNavGroup Title="Currencies" Expanded="true">
+        <MudNavLink Href="/CurrencyOverview" Match="NavLinkMatch.Prefix">Currency overview</MudNavLink>
+    </MudNavGroup>
+</MudNavMenu>
 @code {
     private bool collapseNavMenu = true;
 
